tests/fixtures/invalid/pow_str_set_bool.py
# Cannot call pow() with Str, Set[int], Bool
x = pow("hello", {1, 2, 3}, True)
